@@ -1,0 +1,105 @@
+TITLE     MDANALYSIS FRAMES FROM 0, SKIP 1: Created by PDBWriter
+CRYST1    0.000    0.000    0.000   0.00   0.00   0.00 P 1           1
+MODEL         1
+ATOM      1  X   SYST    1       0.192  -0.797  -1.042  1.00  0.00           X
+ATOM      2  X   SYST    1      -0.150   0.308   0.957  1.00  0.00           X
+ATOM      3  X   SYST    1      -0.752  -0.125  -0.563  1.00  0.00           X
+ATOM      4  X   SYST    1       0.483  -1.342  -1.400  1.00  0.00           X
+ATOM      5  X   SYST    1       0.550  -0.672  -1.462  1.00  0.00           X
+ATOM      6  X   SYST    1      -0.644  -0.858   0.751  1.00  0.00           X
+ATOM      7  X   SYST    1       1.092   1.182  -1.172  1.00  0.00           X
+ATOM      8  X   SYST    1      -1.028   1.086   0.098  1.00  0.00           X
+ATOM      9  X   SYST    1      -2.109   0.854  -0.326  1.00  0.00           X
+ATOM     10  X   SYST    1      -0.430   3.140   0.412  1.00  0.00           X
+ATOM     11  X   SYST    1      -1.051   0.127  -0.654  1.00  0.00           X
+ATOM     12  X   SYST    1       1.934   1.939  -0.671  1.00  0.00           X
+ATOM     13  X   SYST    1      -1.622   2.113  -1.297  1.00  0.00           X
+ATOM     14  X   SYST    1      -0.964  -1.267  -1.626  1.00  0.00           X
+ATOM     15  X   SYST    1       0.079  -1.222  -1.151  1.00  0.00           X
+ATOM     16  X   SYST    1       1.328   1.413  -1.109  1.00  0.00           X
+ATOM     17  X   SYST    1       2.707  -3.728   2.036  1.00  0.00           X
+ATOM     18  X   SYST    1      -1.879  -1.751  -0.008  1.00  0.00           X
+ATOM     19  X   SYST    1       0.509   0.497   0.657  1.00  0.00           X
+ATOM     20  X   SYST    1      -1.859  -1.078   1.447  1.00  0.00           X
+ATOM     21  X   SYST    1      -1.484   0.366   1.113  1.00  0.00           X
+ATOM     22  X   SYST    1       1.004  -0.138  -1.316  1.00  0.00           X
+ATOM     23  X   SYST    1      -1.070  -1.564  -0.288  1.00  0.00           X
+ATOM     24  X   SYST    1      -1.634  -1.837   1.273  1.00  0.00           X
+ATOM     25  X   SYST    1      -0.578  -1.060  -1.521  1.00  0.00           X
+ATOM     26  X   SYST    1       0.855   1.954  -0.705  1.00  0.00           X
+ATOM     27  X   SYST    1       1.089  -2.214   0.386  1.00  0.00           X
+ATOM     28  X   SYST    1       0.654  -0.547   0.125  1.00  0.00           X
+ATOM     29  X   SYST    1       1.196   0.560  -1.884  1.00  0.00           X
+ATOM     30  X   SYST    1       1.537  -1.519   1.516  1.00  0.00           X
+ATOM     31  X   SYST    1      -0.333   0.382  -1.087  1.00  0.00           X
+ATOM     32  X   SYST    1       0.758  -0.508   0.637  1.00  0.00           X
+ATOM     33  X   SYST    1       0.912  -0.132  -0.114  1.00  0.00           X
+ATOM     34  X   SYST    1       0.514  -2.753  -1.568  1.00  0.00           X
+ATOM     35  X   SYST    1      -2.796   0.934   1.568  1.00  0.00           X
+ATOM     36  X   SYST    1      -0.316  -0.149  -1.460  1.00  0.00           X
+ATOM     37  X   SYST    1       1.589  -1.918   1.128  1.00  0.00           X
+ATOM     38  X   SYST    1       0.893   0.243   1.651  1.00  0.00           X
+ATOM     39  X   SYST    1      -1.718  -1.066   1.226  1.00  0.00           X
+ATOM     40  X   SYST    1       0.329   0.702   0.037  1.00  0.00           X
+ATOM     41  X   SYST    1      -0.093  -1.030  -0.573  1.00  0.00           X
+ATOM     42  X   SYST    1      -0.245   0.664   1.448  1.00  0.00           X
+ATOM     43  X   SYST    1       1.946  -2.568   0.803  1.00  0.00           X
+ATOM     44  X   SYST    1      -2.092  -1.243  -0.670  1.00  0.00           X
+ATOM     45  X   SYST    1      -0.315   0.386  -0.957  1.00  0.00           X
+ATOM     46  X   SYST    1      -2.788  -1.573  -0.351  1.00  0.00           X
+ATOM     47  X   SYST    1      -0.680  -1.665   0.872  1.00  0.00           X
+ATOM     48  X   SYST    1       1.844   1.731   0.719  1.00  0.00           X
+ATOM     49  X   SYST    1      -0.008   2.494  -1.046  1.00  0.00           X
+ATOM     50  X   SYST    1       0.594   0.757  -0.859  1.00  0.00           X
+ATOM     51  X   SYST    1      -1.617  -0.093   2.723  1.00  0.00           X
+ATOM     52  X   SYST    1      -0.160   1.120   2.035  1.00  0.00           X
+ATOM     53  X   SYST    1      -0.241  -1.276   1.334  1.00  0.00           X
+ATOM     54  X   SYST    1      -0.650  -0.517   0.589  1.00  0.00           X
+ATOM     55  X   SYST    1       0.140  -1.181  -2.026  1.00  0.00           X
+ATOM     56  X   SYST    1       0.263   0.025  -0.591  1.00  0.00           X
+ATOM     57  X   SYST    1      -2.602   0.590  -0.103  1.00  0.00           X
+ATOM     58  X   SYST    1       1.164  -1.947  -0.433  1.00  0.00           X
+ATOM     59  X   SYST    1       0.335  -2.007  -1.063  1.00  0.00           X
+ATOM     60  X   SYST    1       3.312  -0.641   0.481  1.00  0.00           X
+ATOM     61  X   SYST    1       0.318  -0.649  -1.398  1.00  0.00           X
+ATOM     62  X   SYST    1       0.846   1.393  -1.362  1.00  0.00           X
+ATOM     63  X   SYST    1       2.293   1.473   0.462  1.00  0.00           X
+ATOM     64  X   SYST    1      -0.713  -1.557   1.726  1.00  0.00           X
+ATOM     65  X   SYST    1       2.920  -1.216  -0.189  1.00  0.00           X
+ATOM     66  X   SYST    1      -1.824   1.101   0.334  1.00  0.00           X
+ATOM     67  X   SYST    1       0.151  -0.205  -0.040  1.00  0.00           X
+ATOM     68  X   SYST    1      -1.562   0.608  -0.604  1.00  0.00           X
+ATOM     69  X   SYST    1       2.523   1.642   0.167  1.00  0.00           X
+ATOM     70  X   SYST    1      -0.219   0.873  -0.553  1.00  0.00           X
+ATOM     71  X   SYST    1       1.307  -0.766   0.101  1.00  0.00           X
+ATOM     72  X   SYST    1      -0.034  -2.097   0.004  1.00  0.00           X
+ATOM     73  X   SYST    1       0.315   0.406  -0.990  1.00  0.00           X
+ATOM     74  X   SYST    1      -1.116  -0.050  -0.500  1.00  0.00           X
+ATOM     75  X   SYST    1       1.444   0.385  -0.008  1.00  0.00           X
+ATOM     76  X   SYST    1       1.172   1.610  -0.969  1.00  0.00           X
+ATOM     77  X   SYST    1       0.605  -0.021  -1.358  1.00  0.00           X
+ATOM     78  X   SYST    1      -2.316   0.837   0.168  1.00  0.00           X
+ATOM     79  X   SYST    1       0.430  -1.242   0.087  1.00  0.00           X
+ATOM     80  X   SYST    1       2.290  -0.587  -1.829  1.00  0.00           X
+ATOM     81  X   SYST    1       0.144  -0.724  -0.735  1.00  0.00           X
+ATOM     82  X   SYST    1       0.756  -0.873  -0.661  1.00  0.00           X
+ATOM     83  X   SYST    1       1.778   1.564   1.385  1.00  0.00           X
+ATOM     84  X   SYST    1      -1.414   1.198   0.396  1.00  0.00           X
+ATOM     85  X   SYST    1      -0.075   1.270   1.709  1.00  0.00           X
+ATOM     86  X   SYST    1      -3.111  -1.338  -1.163  1.00  0.00           X
+ATOM     87  X   SYST    1       0.021   3.037  -0.199  1.00  0.00           X
+ATOM     88  X   SYST    1      -1.968  -2.604   0.683  1.00  0.00           X
+ATOM     89  X   SYST    1      -0.082   1.604  -1.400  1.00  0.00           X
+ATOM     90  X   SYST    1      -0.772   1.781  -1.497  1.00  0.00           X
+ATOM     91  X   SYST    1       0.159   1.882   0.874  1.00  0.00           X
+ATOM     92  X   SYST    1      -2.455  -0.851   0.206  1.00  0.00           X
+ATOM     93  X   SYST    1      -0.461   1.583   3.403  1.00  0.00           X
+ATOM     94  X   SYST    1       1.318  -1.974  -0.323  1.00  0.00           X
+ATOM     95  X   SYST    1       0.742  -1.308  -1.363  1.00  0.00           X
+ATOM     96  X   SYST    1       1.760   0.902   1.184  1.00  0.00           X
+ATOM     97  X   SYST    1       1.740  -0.107  -1.524  1.00  0.00           X
+ATOM     98  X   SYST    1       0.084  -1.835  -0.533  1.00  0.00           X
+ATOM     99  X   SYST    1       2.022   2.084   0.112  1.00  0.00           X
+ATOM    100  X   SYST    1      -0.454   0.563   2.780  1.00  0.00           X
+ENDMDL
+END
